Fixed path of AnimationDataSerializer

--- a/animate/Makefile
+++ b/animate/Makefile
@@ -1,5 +1,5 @@
 animate:
-	g++ -g -shared -o AnimationGeneration -fPIC AnimationDataSerializer/modeldata.pb.cc AnimationGeneration.cpp `pkg-config --cflags --libs protobuf` -Wl,--no-as-needed -ldl
+	g++ -g -shared -o AnimationGeneration -fPIC ../AnimationDataSerializer/modeldata.pb.cc AnimationGeneration.cpp `pkg-config --cflags --libs protobuf` -Wl,--no-as-needed -ldl
 
 run:
 	./AnimationGeneration
